test-data/invalid/pluraltranslate-string-missing-args.jsx
const Test = () => {
    PluralTranslate.string('foo');
};
